--- a/src/app/create-user/create-user.component.html
+++ b/src/app/create-user/create-user.component.html
@@ -36,7 +36,7 @@
                         <div class="col-md-6">
                           <div class="form-group label-floating">
                             <label class="control-label">Phone</label>
-                            <input type="text" class="form-control" [(ngModel)]="phone" name="phone" required="required">
+                            <input type="number" class="form-control" [(ngModel)]="phone" name="phone" required="required">
                           </div>
                         </div>
                       </div>
