--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,7 +4,7 @@
             <button class="btn btn-primary" routerLink="/CreateUser">Create</button>
         </div>
         <div class="col-sm-3">
-                <button class="btn btn-danger" routerLink="/ListUserComponent">List</button>
+                <button class="btn btn-danger" routerLink="/">List</button>
             </div>
           </div>
 </div>
